# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.46 2009/02/09 11:34:25 tr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.5 (2009/??/??)
 - (2009/02/09) Fixed bug# 3458 - Length of E-mail adress form in
    AdminSystemAddressForm is way too short.
 - (2009/01/30) Fixed bug# 3635 - Was not able to install .opm packages bigger
    then 1MB (because of missing MySQL config) but OTRS error message was
    miss leading.
 - (2009/01/28) Fixed bug# 3242 - AdminGenericAgent produces apache-error-log
    entry.
 - (2009/01/26) Fixed bug# 3528 - Stats-cache-mechanism does not take unfixed
    restrictions in consideration.
 - (2009/01/23) Fixed bug# 3615 - The links to the related Customer User and
    related Group in [ Customer Users <-> Groups ] frontend were broken.
 - (2009/01/23) Fixed bug# 3499 - Permission problems if you change the
    configuration of the System::Permissions. Now it doesn't matter if you
    active or deactive one of the additional permissions.
 - (2009/01/22) Fixed bug# 3137 - Ticket search does not work with words like
    "BPX" and "new".
 - (2009/01/22) Fixed bug# 3596 - Show a warning, if some tries to renaming
    the admin group in admin frontend.

2.3.4 (2009/01/21)
 - (2009/01/20) Fixed bug# 3447 - CustomerUser-Renaming to existing UserLogin
    was possible.
 - (2009/01/20) Fixed bug# 3603 - Different Max-Attribute handling in Layout.pm
    BuildSelection and OptionStrgHashRef.
 - (2009/01/20) Fixed bug# 3601 - Problems in function BuildSelection with
   ''-Strings and 0.
 - (2009/01/15) Fixed bug# 3595 - VacationCheck() of Kernel::System::Time is
    ignoring different OTRS calendar.
 - (2009/01/13) Fixed bug# 3542 - Static Stats lose associated perlmodule after
    editing.